--- a/adguard/config.yaml
+++ b/adguard/config.yaml
@@ -34,11 +34,13 @@ options:
   ssl: true
   certfile: fullchain.pem
   keyfile: privkey.pem
+  private_networks: []
 schema:
   log_level: list(trace|debug|info|notice|warning|error|fatal)?
   ssl: bool
   certfile: str
   keyfile: str
   leave_front_door_open: bool?
+  private_networks: str
 backup_exclude:
   - "*/adguard/data/querylog.*"
