--- a/adguard/config.yaml
+++ b/adguard/config.yaml
@@ -41,6 +41,7 @@ schema:
   certfile: str
   keyfile: str
   leave_front_door_open: bool?
-  private_networks: str
+  private_networks: 
+    - str
 backup_exclude:
   - "*/adguard/data/querylog.*"
