--- a/adguard/config.yaml
+++ b/adguard/config.yaml
@@ -1,7 +1,7 @@
 ---
 name: AdGuard Home (Beta)
 version: dev
-slug: adguard-home
+slug: adguard
 description: Network-wide ads & trackers blocking DNS server (Beta)
 url: https://github.com/danielszilagyi/addon-adguard-home/
 codenotary: codenotary@frenck.dev
